Fix error word wrap

--- a/app/styles/css/device-manager.css
+++ b/app/styles/css/device-manager.css
@@ -5,7 +5,6 @@
     padding-bottom: 1px;
     padding-right: 7px;
     border-radius: 5px;
-    white-space: nowrap;
 }
 
 .device-manager-page .tag:first-of-type {
@@ -15,7 +14,6 @@
     padding-bottom: 1px;
     padding-right: 7px;
     border-radius: 5px;
-    white-space: nowrap;
 }
 
 .device-manager-page .row-with-error > td {
